# openzfs

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json.sample  META  Makefile.am  README.md
.github/workflows/: build_for_wsl.yaml  notify-irc.yml  windows-build-test.yml  zfs-windows-tests.yml  zfs-windows.yml
cmd/: CMakeLists.txt  ztest.c
cmd/raidz_test/: CMakeLists.txt  raidz_test.c
cmd/zdb/: CMakeLists.txt  zdb.c
cmd/zed/: CMakeLists.txt  zed.c  zed.h  zed_conf.c  zed_log.c
cmd/zfs/: zfs_main.c
cmd/zinject/: CMakeLists.txt  zinject.c
cmd/zpool/: zpool_main.c  zpool_util.c  zpool_vdev.c
cmd/zstream/: CMakeLists.txt  zstream_redup.c
config/: kernel.m4
contrib/bpftrace/: Makefile.am
contrib/windows/: CMakeLists.txt  attestation.sh  openzfs.ddf
include/: libzfs.h  libzutil.h  zfs_fletcher.h
include/sys/: abd.h  abd_impl.h  arc_impl.h  dmu_zfetch.h  dsl_deadlist.h  dsl_pool.h  efi_partition.h  mntent.h  spa.h  vdev_file.h  vdev_impl.h  xvattr.h  zcp.h  zfs_context.h  zfs_debug.h  zfs_file.h  zfs_ioctl.h  zfs_ioctl_impl.h  zfs_znode.h  zio.h  zio_checksum.h  zvol_impl.h
lib/: CMakeLists.txt
lib/libefi/: rdwr_efi_windows.c
lib/libicp/: CMakeLists.txt  Makefile.am
lib/libnvpair/: libnvpair_json.c
lib/libshare/: libshare.c
lib/libspl/: CMakeLists.txt  assert.c  atomic.c  timestamp.c
lib/libunicode/: CMakeLists.txt
lib/libzdb/: CMakeLists.txt
lib/libzpool/: taskq.c  (+3 more)
lib/os/windows/libfetch/: CMakeLists.txt  common.c  common.h  fetch.c  fetch.h  file.c  http.c  httperr.h
module/: CMakeLists.txt  Kbuild.in
(+372 files in other folders)
